--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,12 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==5.1.6
 djangorestframework==3.15.2
+gunicorn==23.0.0
 idna==3.10
+packaging==26.0
 pillow==11.1.0
+python-decouple==3.8
 requests==2.32.3
 sqlparse==0.5.3
 urllib3==2.3.0
+whitenoise==6.11.0
