--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   web:
     build: .
@@ -8,3 +6,5 @@ services:
     volumes:
       - ./staticfiles:/app/staticfiles
     restart: unless-stopped
+    env_file:
+      - .env
