--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,13 @@ services:
     build: .
     ports:
       - "8000:8000"
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     volumes:
-      - ./static:/app_music/static
-      - ./staticfiles:/app_music/staticfiles
+      - ./static:/app/static
+      - ./staticfiles:/app/staticfiles
     restart: unless-stopped
     env_file:
       - .env
