--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ whitenoise==6.11.0
 django-compressor==4.6.0
 httpx==0.28.1
 uvicorn==0.40.0
+django-redis==6.0.0
+redis[hiredis]==7.1.1
+hiredis==3.3.0
