--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,14 @@ services:
     build: .
     ports:
       - "8000:8000"
-    deploy:
-      resources:
-        limits:
-          memory: 512M
+    mem_limit: 512m
     volumes:
+      - .:/app
       - ./static:/app/static
       - ./staticfiles:/app/staticfiles
     restart: unless-stopped
     env_file:
-      - .env
+      - .env.dev
     environment:
       REDIS_HOST: redis
       REDIS_PORT: 6379
@@ -20,5 +18,14 @@ services:
       - redis
 
   redis:
-    image: redis:7.1.1
+    image: redis:7-alpine
+    command: redis-server --maxmemory 256mb --maxmemory-policy allkeys-lru
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    mem_limit: 320m
     restart: unless-stopped
+
+volumes:
+  redis_data:
