refactor: Обновление .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 DEBUG=1
+
 # Сгенерируйте новый ключ
 SECRET_KEY=django-insecure-change-me-to-something-secret
+
 ALLOWED_HOSTS=*
+
 # API-ключ Last.fm
 LASTFM_KEY=your_lastfm_api_key_here
+
+# Redis (локальный запуск)
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
