--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,6 @@ LASTFM_KEY=your_lastfm_api_key_here
 
 # Redis (локальный запуск)
 REDIS_HOST=redis
+#REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_DB=0
