feat: переход на PostgreSQL, кастомная модель пользователя и JWT

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,6 @@ ALLOWED_HOSTS=*
 # API-ключ Last.fm
 LASTFM_KEY=your_lastfm_api_key_here
 
-# Redis (локальный запуск)
-REDIS_HOST=redis
-#REDIS_HOST=127.0.0.1
+# Настройки Redis
 REDIS_PORT=6379
 REDIS_DB=0
