--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,20 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
     depends_on:
+      - postgres
       - redis
+
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_DB: music_platform
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
 
   redis:
     image: redis:7-alpine
@@ -29,4 +42,5 @@ services:
     restart: unless-stopped
 
 volumes:
+  postgres_data:
   redis_data:
