--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,37 @@
+anyio==4.12.1
 asgiref==3.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.3.1
+dj-database-url==3.1.0
 Django==5.1.6
+django-appconf==1.2.0
+django-redis==6.0.0
+django-stubs==5.2.9
+django-stubs-ext==5.2.9
+django_compressor==4.6.0
 djangorestframework==3.15.2
+djangorestframework-stubs==3.16.7
+djangorestframework_simplejwt==5.5.1
 gunicorn==23.0.0
+h11==0.16.0
+hiredis==3.3.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 packaging==26.0
 pillow==11.1.0
+psycopg2-binary==2.9.11
+PyJWT==2.11.0
 python-decouple==3.8
+rcssmin==1.2.2
+redis==7.1.1
 requests==2.32.3
+rjsmin==1.2.5
 sqlparse==0.5.3
+types-PyYAML==6.0.12.20250915
+types-requests==2.32.4.20260107
+typing_extensions==4.15.0
 urllib3==2.3.0
-whitenoise==6.11.0
-django-compressor==4.6.0
-httpx==0.28.1
 uvicorn==0.40.0
-django-redis==6.0.0
-redis[hiredis]==7.1.1
-hiredis==3.3.0
+whitenoise==6.11.0
