--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.3.1
+coverage==7.13.4
 dj-database-url==3.1.0
 Django==5.1.6
 django-appconf==1.2.0
@@ -13,20 +14,30 @@ django_compressor==4.6.0
 djangorestframework==3.15.2
 djangorestframework-stubs==3.16.7
 djangorestframework_simplejwt==5.5.1
+factory_boy==3.3.3
+Faker==40.4.0
 gunicorn==23.0.0
 h11==0.16.0
 hiredis==3.3.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.3.0
 packaging==26.0
 pillow==11.1.0
+pluggy==1.6.0
 psycopg2-binary==2.9.11
+Pygments==2.19.2
 PyJWT==2.11.0
+pytest==9.0.2
+pytest-asyncio==1.3.0
+pytest-cov==7.0.0
+pytest-django==4.11.1
 python-decouple==3.8
 rcssmin==1.2.2
 redis==7.1.1
 requests==2.32.3
+respx==0.22.0
 rjsmin==1.2.5
 sqlparse==0.5.3
 types-PyYAML==6.0.12.20250915
