--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,10 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = music_project.settings.test
 python_files = test_*.py *_tests.py
-addopts = -ra
+addopts = -v --create-db --no-migrations
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
+filterwarnings =
+    ignore:.*database.*is being accessed by other users:pytest.PytestWarning
+
+
