--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,20 +21,20 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER }}
+          password: ${{ secrets.PASSWORD }}
 
       - name: Build and push image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/music_project:latest
+          tags: ${{ secrets.DOCKER }}/music_project:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            LASTFM_KEY=${{ secrets.LASTFM_KEY }}
-            SECRET_KEY=${{ secrets.SECRET_KEY }}
+            LASTFM_KEY=${{ secrets.LASTFMKEY }}
+            SECRET_KEY=${{ secrets.DJANGOKEY }}
 
       - name: Trigger Render Deployment
         if: success()
