--- a/deploy.yml
+++ b/deploy.yml
@@ -13,7 +13,8 @@ services:
       POSTGRES_DB: music_platform
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      LASTFM_KEY: "49b6213396a4b5a21637bcf627a4bf3d"
+      # Публичный ключ API Last.fm
+      LASTFM_KEY: "49b6213396a4b5a21637bcf627a4bf3d"  
     depends_on:
       - postgres
       - redis
