--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,40 @@
-name: Continuous Deployment
+name: Continuous Integration & Deployment
 
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
   workflow_dispatch:
 
 jobs:
+  linting:
+    name: Linting (Black & Flake8)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
+      - name: Install linting tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install black flake8
+
+      - name: Check with Black
+        run: black . --check --line-length 88
+
+      - name: Check with Flake8
+        run: flake8 . --count --show-source --statistics
+
   build_and_push:
     name: Build and Push Docker image
     runs-on: ubuntu-latest
+    needs: linting
     if: github.ref == 'refs/heads/main'
 
     steps:
