--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,29 @@ on:
     branches: [ main, master ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install Linting Tools
+        run: |
+          pip install black flake8
+
+      - name: Run Black check
+        run: black --check .
+
+      - name: Run Flake8 check
+        run: flake8 .
+
   test:
+    needs: lint
     runs-on: ubuntu-latest
 
     services:
