--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Continuous Integration & Deployment
+name: K8s Version CI
 
 on:
   push:
-    branches: [main]
+    branches: [ k8s_version ]
   pull_request:
-    branches: [main]
+    branches: [ k8s_version ]
   workflow_dispatch:
 
 jobs:
@@ -35,7 +35,7 @@ jobs:
     name: Build and Push Docker image
     runs-on: ubuntu-latest
     needs: linting
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/k8s_version'
 
     steps:
       - name: Checkout
@@ -61,9 +61,3 @@ jobs:
           build-args: |
             LASTFM_KEY=${{ secrets.LASTFMKEY }}
             SECRET_KEY=${{ secrets.DJANGOKEY }}
-
-      - name: Trigger Render Deployment
-        if: success()
-        run: |
-          echo "🚀 Отправляем сигнал на Render..."
-          curl -f "${{ secrets.RENDER_DEPLOY_HOOK }}"
