--- a/k8s/db-secrets.yml
+++ b/k8s/db-secrets.yml
@@ -5,3 +5,6 @@ metadata:
 type: Opaque
 data:
   postgres-password: YWRtaW4xMjM=
+  SECRET_KEY: bS0rbChhMDRqXiRzanAhN2QtMzRjIyRybW9yXj1rMyNkXzYjMDB2d2VtYiUjaiExYjI=
+  DATABASE_URL: cG9zdGdyZXM6Ly9kYl91c2VyOmFkbWluMTIzQHBvc3RncmVzOjU0MzIvbXVzaWNfZGI=
+  LASTFM_KEY: NDliNjIxMzM5NmE0YjVhMjE2MzdiY2Y2MjdhNGJmM2Q=
