feat(k8s): внедрение persistence для Redis, init-контейнеров и лимитов ресурсов

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: django-config
 data:
-  DEBUG: "True"
+  DEBUG: "False"
   ALLOWED_HOSTS: "*"
   USE_DOCKER: "true"
   REDIS_PORT: "6379"
