--- a/k8s/db-secrets.yml
+++ b/k8s/db-secrets.yml
@@ -6,5 +6,6 @@ type: Opaque
 data:
   postgres-password: YWRtaW4xMjM=
   SECRET_KEY: bS0rbChhMDRqXiRzanAhN2QtMzRjIyRybW9yXj1rMyNkXzYjMDB2d2VtYiUjaiExYjI=
-  DATABASE_URL: cG9zdGdyZXM6Ly9kYl91c2VyOmFkbWluMTIzQHBvc3RncmVzOjU0MzIvbXVzaWNfZGI=
+  DATABASE_URL: cG9zdGdyZXM6Ly9wb3N0Z3JlczphZG1pbjEyM0Bwb3N0Z3Jlczo1NDMyL211c2ljX3BsYXRmb3Jt
   LASTFM_KEY: NDliNjIxMzM5NmE0YjVhMjE2MzdiY2Y2MjdhNGJmM2Q=
+  DJANGO_SUPERUSER_PASSWORD: cGFzc3dvcmQxMjM=
