--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -21,12 +21,12 @@ build:
 
 manifests:
   rawYaml:
-    # Application manifests (managed by Skaffold)
     - k8s/configmap.yaml
     - k8s/django.yml
     - k8s/postgres.yml
     - k8s/redis.yml
     - k8s/restore.yml
+    - k8s/ingress.yml
 
 deploy:
   kubectl:
@@ -53,3 +53,4 @@ profiles:
         - k8s/postgres.yml
         - k8s/redis.yml
         - k8s/restore.yml
+        - k8s/ingress.yml
