--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,8 +28,30 @@ jobs:
       - name: Run Flake8 check
         run: flake8 .
 
-  test:
+  frontend-test:
     needs: lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install frontend dependencies
+        run: npm ci
+
+      - name: Run frontend lint (ESLint)
+        run: npm run lint:js
+
+      - name: Run frontend unit tests (Vitest)
+        run: npx vitest run
+
+  test:
+    needs: [lint, frontend-test]
     runs-on: ubuntu-latest
 
     services:
