--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,23 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
 anyio==4.12.1
-asgiref==3.8.1
+asgiref==3.11.1
 attrs==25.4.0
+autobahn==25.12.2
+Automat==25.4.16
+black==26.1.0
+cbor2==5.8.0
 certifi==2025.1.31
+cffi==2.0.0
+channels==4.3.2
+channels_redis==4.3.0
 charset-normalizer==3.4.1
 click==8.3.1
+constantly==23.10.4
 coverage==7.13.4
+cryptography==46.0.5
+daphne==4.2.1
 dj-database-url==3.1.0
 Django==5.1.6
 django-appconf==1.2.0
@@ -18,27 +31,46 @@ djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.29.0
 factory_boy==3.3.3
 Faker==40.4.0
+flake8==7.3.0
+frozenlist==1.8.0
 gunicorn==23.0.0
 h11==0.16.0
 hiredis==3.3.0
 httpcore==1.0.9
 httpx==0.28.1
+hyperlink==21.0.0
 idna==3.10
+Incremental==24.11.0
 inflection==0.5.1
 iniconfig==2.3.0
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
+mccabe==0.7.0
+msgpack==1.1.2
+multidict==6.7.1
+mypy_extensions==1.1.0
 packaging==26.0
+pathspec==1.0.4
 pillow==11.1.0
+platformdirs==4.9.2
 pluggy==1.6.0
+propcache==0.4.1
 psycopg2-binary==2.9.11
+py-ubjson==0.16.1
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycodestyle==2.14.0
+pycparser==3.0
+pyflakes==3.4.0
 Pygments==2.19.2
 PyJWT==2.11.0
+pyOpenSSL==25.3.0
 pytest==9.0.2
 pytest-asyncio==1.3.0
 pytest-cov==7.0.0
 pytest-django==4.11.1
 python-decouple==3.8
+pytokens==0.4.1
 PyYAML==6.0.3
 rcssmin==1.2.2
 redis==7.1.1
@@ -47,11 +79,17 @@ requests==2.32.3
 respx==0.22.0
 rjsmin==1.2.5
 rpds-py==0.30.0
+service-identity==24.2.0
 sqlparse==0.5.3
+Twisted==25.5.0
+txaio==25.12.2
 types-PyYAML==6.0.12.20250915
 types-requests==2.32.4.20260107
 typing_extensions==4.15.0
+ujson==5.11.0
 uritemplate==4.2.0
 urllib3==2.3.0
 uvicorn==0.40.0
 whitenoise==6.11.0
+yarl==1.22.0
+zope.interface==8.2
